--- a/PodoDemo/Views/Todoes/Create.cshtml
+++ b/PodoDemo/Views/Todoes/Create.cshtml
@@ -1,102 +1,151 @@
-@model PodoDemo.Models.Todo
+﻿@model PodoDemo.Models.Todo
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "할일";
 }
 
-<h2>Create</h2>
 
-<form asp-action="Create">
-    <div class="form-horizontal">
-        <h4>Todo</h4>
-        <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Name" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+<script type="text/javascript">
+    $(document).ready(function () {
+        SetBasicElement();// 기본적으로 그리는 화면 내용
+    });
+
+    // 기본적으로 그리는 화면 내용
+    function SetBasicElement() {
+        $("#jqdatetimeinput_startdate").jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' });
+        $("#jqdatetimeinput_enddate").jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' });
+        GetOptionDDL('5', 'State', SetoptionTag, '', true, false, false);
+        SetoptionTag('RegardingTypeList', JSON.parse('@Html.Raw(ViewBag.SubmenuList)'), '', false, true, false);
+    }
+
+    // 폼이 입력될 때
+    function SubmitForm() {
+        // 유효성 검사 후 진행
+        if (ValidateForm()) {
+            $("#Stratdate").val($('#jqdatetimeinput_startdate').jqxDateTimeInput('getText'));
+            $("#Enddate").val($('#jqdatetimeinput_enddate').jqxDateTimeInput('getText'));
+            $("#TodoesCreateForm").submit();
+        }
+    }
+
+    // 입력한 값들에 대한 유효성 검사
+    function ValidateForm() {
+        var nameValue = $("#Name").val();
+        var startdateValue = $("#jqdatetimeinput_startdate").jqxDateTimeInput('getText');
+        var detailValue = $("#Detail").val();
+
+        if (nameValue == "") {
+            alert("제목을 입력해주세요.");
+            return false;
+        }
+
+
+        if (startdateValue == "") {
+            alert("시작날짜는 반드시 지정해주세요.");
+            return false;
+        } else {
+            if (!IsDateType(startdateValue)) {
+                alert("날짜 형식을 올바르게 입력해주세요.");
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+    // 관련항목에 따른 각 항목 Index 띄워주기
+    function SearchRegardingObjectPop() {
+        var inSubmenu = new Object();
+        inSubmenu.Id = $("#RegardingTypeList option:selected").val();
+        console.log(window.location.origin);
+        var ss = ExecuteAjax("POST", window.location.origin + "/api/CommonAPI/GetSubmenuUrl", "json", "application/json", inSubmenu);
+        console.log("메뉴URL :   " + ss);
+        //WindowOpenScroll("/Contacts/Index?isPop=true", "", 350, 600, 100, 100);
+    }
+</script>
+
+<div class="View">
+    <div class="container custom-container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">할일 생성</p>
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Description" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+
+        <div class="col-md-12">
+            <div class="custom-title">
+                <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                <span>기본 정보</span>
+                <hr />
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Regardingobjectid" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Regardingobjectid" class="form-control" />
-                <span asp-validation-for="Regardingobjectid" class="text-danger"></span>
+
+        <form class="form-horizontal" id="TodoesCreateForm" action="/Todoes/Create" method="post">
+            @Html.AntiForgeryToken()
+            <div class="form-group">
+                <label class="col-md-1 control-label requireField">제목</label>
+                <div class="col-md-3">
+                    <input type="text" id="Name" name="Name" class="form-control" placeholder="제목" />
+                </div>
+
+                <label class="col-md-1 control-label requireField">시작일</label>
+                <div class="col-md-3">
+                    <div id="jqdatetimeinput_startdate"></div>
+                    <input type="hidden" id="Stratdate" name="Stratdate" />
+                </div>
+                <label class="col-md-1 control-label">종료일</label>
+                <div class="col-md-3">
+                    <div id="jqdatetimeinput_enddate"></div>
+                    <input type="hidden" id="Enddate" name="Enddate" />
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Startdate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Startdate" class="form-control" />
-                <span asp-validation-for="Startdate" class="text-danger"></span>
+
+            <div class="form-group">
+                <label class="col-md-1 control-label requireField">상태</label>
+                <div class="col-md-3">
+                    <select id="State" name="State" class="form-control"></select>
+                </div>
+                <label class="col-md-1 control-label">관련항목<br />검색하기</label>
+                <div class="col-md-3">
+                    <div class="input-group">
+                        <input type="hidden" id="Regardingobjectid" name="Regardingobjectid" />
+                        <select class="form-control" id="RegardingTypeList" name="RegardingTypeList"></select>
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" onclick="SearchRegardingObjectPop();">
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </button>
+                        </span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <input type="text" id="RegardingobjectName" name="RegardingobjectName" class="form-control" 
+                           placeholder="선택된 관련항목이 표시됩니다." aria-describedby="regardingobject name" readonly="readonly"/>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Enddate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Enddate" class="form-control" />
-                <span asp-validation-for="Enddate" class="text-danger"></span>
+            <div class="form-group">
+                <label class="col-md-1 control-label">설명</label>
+                <div class="col-md-11">
+                    <textarea id="Description" name="Description" class="form-control" placeholder="내용을 입력하세요." rows="4"></textarea>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createdate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createdate" class="form-control" />
-                <span asp-validation-for="Createdate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createuser" class="form-control" />
-                <span asp-validation-for="Createuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifydate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifydate" class="form-control" />
-                <span asp-validation-for="Modifydate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifyuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifyuser" class="form-control" />
-                <span asp-validation-for="Modifyuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Ownerid" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Ownerid" class="form-control" />
-                <span asp-validation-for="Ownerid" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="State" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="State" class="form-control" />
-                <span asp-validation-for="State" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        </form>
+
+        <div class="row">
+            @if (ViewData["Write"].ToString().Equals("4-1") || ViewData["Write"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="CreateTodoesButton" class="btn btn-default" onclick="SubmitForm();">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+            }
+            <div class="col-md-2 custom-row-btn-margin">
+                <a href="/Todoes/Index" class="btn btn-default">
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    목록
+                </a>
             </div>
         </div>
     </div>
-</form>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
