--- a/PodoDemo/Views/Todoes/Create.cshtml
+++ b/PodoDemo/Views/Todoes/Create.cshtml
@@ -61,15 +61,15 @@
     function SearchRegardingObjectPop() {
         var inSubmenu = new Object();
         inSubmenu.Id = $("#RegardingTypeList option:selected").val();
-
         var menu = ExecuteAjax("POST", window.location.origin + "/api/CommonAPI/GetSubmenuUrl", "json", "application/json", JSON.stringify(inSubmenu));
+        $("#Regardingobjecttypeid").val(menu.Id);
         WindowOpenScroll(menu.Menuurl+ "?isPop=true", "", 350, 600, 100, 100);
     }
 
     // 관련항목에서 설정한 내용들 반영
     function SetRegardingInfo(id, name) {
         $("#Regardingobjectid").val(id);
-        $("#RegardingobjectName").val(name);
+        $("#Regardingobjectname").val(name);
     }
 </script>
 
@@ -117,7 +117,8 @@
                 <label class="col-md-1 control-label">관련항목<br />검색하기</label>
                 <div class="col-md-3">
                     <div class="input-group">
-                        <input type="hidden" id="Regardingobjectid" name="Regardingobjectid" />
+                        <input type="hidden" id="Regardingobjectid" name="Regardingobjectid" value="" />
+                        <input type="hidden" id="Regardingobjecttypeid" name="Regardingobjecttypeid" value="" />
                         <select class="form-control" id="RegardingTypeList" name="RegardingTypeList"></select>
                         <span class="input-group-btn">
                             <button type="button" class="btn btn-default" onclick="SearchRegardingObjectPop();">
@@ -127,7 +128,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <input type="text" id="RegardingobjectName" name="RegardingobjectName" class="form-control"
+                    <input type="text" id="Regardingobjectname" name="Regardingobjectname" class="form-control"
                            placeholder="선택된 관련항목이 표시됩니다." aria-describedby="regardingobject name" readonly="readonly" />
                 </div>
             </div>
