--- a/PodoDemo/Views/Todoes/Edit.cshtml
+++ b/PodoDemo/Views/Todoes/Edit.cshtml
@@ -11,10 +11,13 @@
 
     // 기본적으로 그리는 화면 내용
     function SetBasicElement() {
-        $("#jqdatetimeinput_startdate").jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' }).val(new Date('@Model.Startdate.ToString("yyyy-MM-dd")'));
+        $("#jqdatetimeinput_startdate")
+            .jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' })
+            .val(new Date('@Model.Startdate.ToString("yyyy-MM-dd")'));
         $("#jqdatetimeinput_enddate")
             .jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' })
-            .val(new Date('@{Model.Enddate.Equals(DateTime.MinValue) ? "" : Model.Enddate.ToString("yyyy-MM-dd")}'));
+            .val(new Date('@Model.Enddate.ToString("yyyy-MM-dd")'));
+
         GetOptionDDL('5', 'State', SetoptionTag, '@Model.State', true, false, false);
         SetoptionTag('RegardingTypeList', JSON.parse('@Html.Raw(ViewBag.SubmenuList)'), '@Model.Regardingobjecttypeid', false, true, false);
         GetUserDDL("", '@Model.Ownerid', 'Ownerid', SetoptionTag, '@Model.Ownerid', false, false, false);
@@ -27,12 +30,13 @@
             if (ValidateForm()) {
                 $("#Startdate").val($('#jqdatetimeinput_startdate').jqxDateTimeInput('getText'));
                 $("#Enddate").val($('#jqdatetimeinput_enddate').jqxDateTimeInput('getText'));
+                $("#TodoesEditForm").prop("action", "/Todoes/" + targetName + "/@Model.Todoid");
                 $("#TodoesEditForm").submit();
             }
         } else if (targetName == "Delete") {
-            if (confirm("해당 내용을 정말로 삭제하시겠습니까?\n삭제후에는 복원되지 않습니다.")) {
-                if ($("#Contactid").val() != "" && $("#Contactid").val() != null) {
-                    @*$("#TodoesEditForm").prop("action", "/Contacts/" + targetName + "/@Model.Contactid");*@
+            if (confirm("해당 내용을 정말로 삭제하시겠습니까?\n삭제후에는 복원할 수 없습니다.")) {
+                if ($("#Todoid").val() != "" && $("#Todoid").val() != null) {
+                    $("#TodoesEditForm").prop("action", "/Todoes/" + targetName + "/@Model.Todoid");
                     $("#TodoesEditForm").submit();
                 } else {
                     alert("삭제할 내용이 없습니다.");
@@ -168,6 +172,36 @@
                 </div>
             </div>
         </form>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="custom-title">
+                    <hr />
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    <span>이력정보</span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table table-striped table-hover table-responsive">
+                    <thead>
+                        <tr>
+                            <th>생성일</th>
+                            <th>생성자</th>
+                            <th>수정일</th>
+                            <th>수정자</th>
+                        </tr>
+                    </thead>
+                    <tr class="info">
+                        <td><strong>@Model.Createdate</strong></td>
+                        <td><strong>@Model.Createuser</strong></td>
+                        <td><strong>@Model.Modifydate</strong></td>
+                        <td><strong>@Model.Modifyuser</strong></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
 
         <div class="row">
             @if (ViewData["Modify"].ToString().Equals("4-1") || ViewData["Modify"].ToString().Equals("4-2"))
