--- a/PodoDemo/Views/Products/Edit.cshtml
+++ b/PodoDemo/Views/Products/Edit.cshtml
@@ -1,89 +1,137 @@
-@model PodoDemo.Models.Product
+﻿@model PodoDemo.Models.Product
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "제품";
 }
 
-<h2>Edit</h2>
 
-<form asp-action="Edit">
-    <div class="form-horizontal">
-        <h4>Product</h4>
-        <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="Productid" />
-        <div class="form-group">
-            <label asp-for="Name" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+<script type="text/javascript">
+    $(document).ready(function () {
+        SetBasicElement();// 기본적으로 그리는 화면 내용
+    });
+
+    // 기본적으로 그리는 화면 내용
+    function SetBasicElement() {
+        // 검색 조건 키 / 적용할 HTML코드 ID / 콜백함수 / 기본 선택 값 / 전체 / 맨위값 빈값 / 권
+        GetOptionDDL('6', 'Maker', SetoptionTag, '@Model.Maker', true, false, false);
+        GetOptionDDL('7', 'Origin', SetoptionTag, '@Model.Origin', true, false, false);
+        // 부서값 / 적용할 HTML코드 ID / 콜백함수 / 기본 선택 값 / 전체 / 맨위값 빈값 / 권한
+        GetUserDDL("", '@Model.Ownerid', 'Ownerid', SetoptionTag, '@Model.Ownerid', false, false, false);
+    }
+
+    // 폼이 입력될 때
+    function SubmitForm(targetName) {
+        if (targetName == "Edit") {
+            // 유효성 검사 후 진행
+            if (ValidateForm()) {
+                $("#ProductCreateForm").prop("action", "/Products/" + targetName + "/@Model.Productid");
+                $("#ProductCreateForm").submit();
+            }
+        } else if (targetName == "Delete") {
+            if (confirm("해당 내용을 정말로 삭제하시겠습니까?\n삭제후에는 복원되지 않습니다.")) {
+                if ($("#Productid").val() != "" && $("#Productid").val() != null) {
+                    $("#ProductCreateForm").prop("action", "/Products/" + targetName + "/@Model.Productid");
+                    $("#ProductCreateForm").submit();
+                } else {
+                    alert("삭제할 내용이 없습니다.");
+                    return;
+                }
+            }
+        }
+    }
+
+    // 입력한 값들에 대한 유효성 검사
+    function ValidateForm() {
+        var nameValue = $("#Name").val();
+
+        if (nameValue == "") {
+            alert("제품 이름을 입력해주세요.");
+            return false;
+        }
+
+        return true;
+    }
+</script>
+
+<div class="View">
+    <div class="container custom-container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">제품 정보</p>
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Maker" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Maker" class="form-control" />
-                <span asp-validation-for="Maker" class="text-danger"></span>
+
+        <div class="col-md-12">
+            <div class="custom-title">
+                <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                <span>기본 정보</span>
+                <hr />
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Ownerid" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Ownerid" class="form-control" />
-                <span asp-validation-for="Ownerid" class="text-danger"></span>
+
+        <form class="form-horizontal" id="ProductCreateForm" action="/Products/Create" method="post">
+            @Html.AntiForgeryToken()
+            <input type="hidden" id="Productid" name="Productid" value="@Model.Productid" />
+            <input type="hidden" id="Createdate" name="Createdate" value="@Model.Createdate" />
+            <input type="hidden" id="Createuser" name="Createuser" value="@Model.Createuser" />
+            <input type="hidden" id="Modifydate" name="Modifydate" value="@Model.Modifydate" />
+            <input type="hidden" id="Modifyuser" name="Modifyuser" value="@Model.Modifyuser" />
+
+            <div class="form-group">
+                <label class="col-md-1 control-label requireField">제품이름</label>
+                <div class="col-md-3">
+                    <input type="text" id="Name" name="Name" class="form-control" value="@Model.Name" placeholder="제품 이름" />
+                </div>
+                <label class="col-md-1 control-label">제조국</label>
+                <div class="col-md-3">
+                    <select id="Origin" name="Origin" class="form-control"></select>
+                </div>
+                <label class="col-md-1 control-label">제조사</label>
+                <div class="col-md-3">
+                    <select id="Maker" name="Maker" class="form-control"></select>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Origin" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Origin" class="form-control" />
-                <span asp-validation-for="Origin" class="text-danger"></span>
+            <div class="form-group">
+                <label class="col-md-1 control-label">제품코드</label>
+                <div class="col-md-11">
+                    <input type="tel" id="Productcode" name="Productcode" class="form-control" value="@Model.Productcode" placeholder="제품 코드" />
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Productcode" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Productcode" class="form-control" />
-                <span asp-validation-for="Productcode" class="text-danger"></span>
+            <div class="form-group">
+                <label class="col-md-1 control-label">담당자</label>
+                <div class="col-md-3">
+                    <select id="Ownerid" name="Ownerid" class="form-control"></select>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createdate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createdate" class="form-control" />
-                <span asp-validation-for="Createdate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createuser" class="form-control" />
-                <span asp-validation-for="Createuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifydate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifydate" class="form-control" />
-                <span asp-validation-for="Modifydate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifyuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifyuser" class="form-control" />
-                <span asp-validation-for="Modifyuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        </form>
+
+        <div class="row">
+            @if (ViewData["Modify"].ToString().Equals("4-1") || ViewData["Modify"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="EditButton" class="btn btn-default" onclick="SubmitForm('Edit');">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+
+            }
+            @if (ViewData["Delete"].ToString().Equals("4-1") || ViewData["Delete"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="DeleteButton" class="btn btn-default btn-danger" onclick="SubmitForm('Delete');">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        삭제
+                    </button>
+                </div>
+            }
+
+            <div class="col-md-2 custom-row-btn-margin">
+                <a href="/Products/Index" class="btn btn-default">
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    목록
+                </a>
             </div>
         </div>
     </div>
-</form>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
