--- a/PodoDemo/Views/Products/Index.cshtml
+++ b/PodoDemo/Views/Products/Index.cshtml
@@ -1,83 +1,212 @@
-﻿@model IEnumerable<PodoDemo.Models.Product>
+﻿@*@model IEnumerable<PodoDemo.Models.Product>*@
+@model string
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "제품";
+    // 팝업 여부 확인
+    if (ViewBag.isPop)
+    {
+        Layout = "~/Views/Shared/Popup_Layout.cshtml";
+    }
 }
 
-<h2>Index</h2>
+<script type="text/javascript">
+    $(document).ready(function () {
+        SetBasicElement(@Html.Raw(Model));
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Maker)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Ownerid)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Origin)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Productcode)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Createdate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Createuser)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Modifydate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Modifyuser)
-                </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Maker)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Ownerid)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Origin)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Productcode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Createdate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Createuser)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Modifydate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Modifyuser)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Productid">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Productid">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Productid">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        // 검색 조건 키 / 적용할 HTML코드 ID / 콜백함수 / 기본 선택 값 / 전체 / 맨위값 빈값 / 권        
+        GetOptionDDL('6', 'Maker', SetoptionTag, '', true, false, false);
+
+        GetUserDDL("", '@ViewBag.UserId', 'Ownerid', SetoptionTag, '', true, false, false); // 담당자
+
+        $('#productList').on('rowdoubleclick', function (event) {
+            var args = event.args;
+            // row's bound index.
+            var boundIndex = args.rowindex;
+            // row's visible index.
+            var visibleIndex = args.visibleindex;
+            // right click.
+            var rightclick = args.rightclick;
+            // original event.
+            var ev = args.originalEvent;
+
+            var data = $('#productList').jqxGrid('getrowdata', boundIndex);
+
+            @*
+                팝업 여부에 따라 팝업이면 기본적으로 거래처 검색 페이지라고 생각해야 한다.
+            *@
+            @if (ViewBag.isPop)
+            {
+                <text>
+            if (typeof window.opener.SetRegardingInfo == "function") { window.opener.SetRegardingInfo(data.Productid, data.Name) }
+            window.close();
+                </text>
+            }
+            else
+            {
+                <text>
+            location.href = "/Products/Edit/" + data.Productid;
+                </text>
+            }
+        });
+
+        // 제조사,담당자 변경 시 마다 제품 재검색
+        $("#Maker, #Ownerid").change(function () {
+            SearchProducts();
+        });
+    });
+
+    // 기본 출력 항목 표시
+    function SetBasicElement(productListRaw) {
+
+        var source =
+            {
+                localdata: productListRaw,
+                datatype: "json",
+                datafields:
+                [
+                    { name: 'Productid', type: 'number' },
+                    { name: 'Name', type: 'string' },
+                    { name: 'Productcode', type: 'string' },
+                    { name: 'Maker', type: 'string' },
+                    { name: 'Ownerid', type: 'string' },
+                ]
+            };
+
+        var dataAdapter = new $.jqx.dataAdapter(source);
+
+        $("#productList").jqxGrid(
+            {
+                width: '100%',
+                source: dataAdapter,
+                pageable: true,
+                autoheight: true,
+                autorowheight: true,
+                sortable: true,
+                altrows: true,
+                enabletooltips: true,
+                editable: false,
+                selectionmode: 'singlerow',
+                pagesizeoptions: [10, 15, 20, 25, 30, 35, 40, 45, 50],
+                //showfilterrow: true,
+                filterable: true,
+                pagesize: 15,
+                theme: "metroCustom",//테마설정
+                localization: GetLocalizationString(),
+                columns: [
+                    //문자로 나오는 항목
+                    { text: "Productid", datafield: "Productid", hidden: true },
+                    { text: "이름", datafield: "Name", align: 'center', cellsalign: 'left', width: '40%', minwidth: '100px' },
+                    { text: '제품코드', datafield: 'Productcode', align: 'center', cellsalign: 'center', width: '20%', minwidth: '100px' },
+                    { text: "제조사", datafield: "Maker", align: 'center', cellsalign: 'center', width: '20%', minwidth: '100px' },
+                    { text: '담당자', datafield: 'Ownerid', align: 'center', cellsalign: 'center', width: '20%', minwidth: '100px' },
+                ]
+            });
+    }
+
+    // 제품 검색 후 반영
+    function SearchProducts() {
+        var SearchInfo = new Object();
+        SearchInfo.Name = $("#Name").val();
+        SearchInfo.Productcode = $("#Productcode").val();
+        SearchInfo.Maker = $("#Maker option:selected").val();
+        SearchInfo.Origin = $("#Origin option:selected").val();
+
+        var productListRaw
+            = ExecuteAjax("POST", "/Products/Search", "json", "application/json", JSON.stringify(SearchInfo));
+        // 리스트에 반영
+        SetBasicElement(productListRaw);
+    }
+</script>
+
+<div class="View">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">
+                    제품 목록
+                </p>
+            </div>
+        </div>
+
+        <form class="form-horizontal" id="SearchAccountsForm">
+            <input type="hidden" id="IsPop" name="IsPop" value="@Html.Raw(ViewBag.isPop)" />
+
+            <div class="form-group">
+                <div class="col-md-12">
+                    <div class="custom-title">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        <span>검색</span>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-1 control-label">제품이름</label>
+                <div class="col-md-2">
+                    <input type="text" id="Name" name="Name" class="form-control" placeholder="제품이름" onkeypress="ExecuteEnterkey(SearchProducts);" />
+                </div>
+
+                <label class="col-md-1 control-label">제품코드</label>
+                <div class="col-md-2">
+                    <input type="text" id="Productcode" name="Productcode" class="form-control" placeholder="제품코드" onkeypress="ExecuteEnterkey(SearchProducts);" />
+                </div>
+
+                <label class="col-md-1 control-label">제조사</label>
+                <div class="col-md-2">
+                    <select id="Maker" name="Maker" class="form-control"></select>
+                </div>
+
+                <label class="col-md-1 control-label">담당자</label>
+                <div class="col-md-2">
+                    <select id="Ownerid" name="Ownerid" class="form-control"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-10 col-md-2">
+                    <button type="button" class="btn btn-default" onclick="SearchProducts();">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        검색
+                    </button>
+                </div>
+            </div>
+        </form>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="custom-title">
+                    <hr />
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    <span>상세 내용</span>
+                </div>
+                <div id="productList"></div>
+            </div>
+        </div>
+
+        @if (ViewBag.isPop)
+        {
+            <div class="row">
+                <div class="col-md-2">
+                    <button type="button" class="btn btn-default" onclick="window.close();">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+                        닫기
+                    </button>
+                </div>
+            </div>
+        }
+        else
+        {
+            @if (ViewData["Write"].ToString().Equals("4-1") || ViewData["Write"].ToString().Equals("4-2"))
+            {
+                <div class="row">
+                    <div class="col-md-2">
+                        <a href="/Products/Create" class="btn btn-default">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            제품 생성
+                        </a>
+                    </div>
+                </div>
+            }
+        }
+    </div>
+</div>
