가격표 관련 수정

--- a/PodoDemo/Views/Products/Index.cshtml
+++ b/PodoDemo/Views/Products/Index.cshtml
@@ -39,6 +39,7 @@
             {
                 <text>
             if (typeof window.opener.SetRegardingInfo == "function") { window.opener.SetRegardingInfo(data.Productid, data.Name) }
+            if (typeof window.opener.SetProductsInfo == "function") { window.opener.SetProductsInfo(data.Productid, data.Name) }
             window.close();
                 </text>
             }
