--- a/PodoDemo/Views/Prices/Create.cshtml
+++ b/PodoDemo/Views/Prices/Create.cshtml
@@ -1,87 +1,116 @@
-@model PodoDemo.Models.Price
+﻿@model PodoDemo.Models.Price
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "가격표";
 }
+<script type="text/javascript">
+    $(document).ready(function () {
+        SetBasicElement();// 기본적으로 그리는 화면 내용
+    });
 
-<h2>Create</h2>
+    // 기본적으로 그리는 화면 내용
+    function SetBasicElement() {
+        // 검색 조건 키 / 적용할 HTML코드 ID / 콜백함수 / 기본 선택 값 / 전체 / 맨위값 빈값 / 권
+        GetOptionDDL('8', 'Currency', SetoptionTag, '', true, false, false);
+    }
 
-<form asp-action="Create">
-    <div class="form-horizontal">
-        <h4>Price</h4>
-        <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Productid" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <select asp-for="Productid" class ="form-control" asp-items="ViewBag.Productid"></select>
+    // 폼이 입력될 때
+    function SubmitForm() {
+        // 유효성 검사 후 진행
+        if (ValidateForm()) {
+            $("#PricesCreateForm").submit();
+        }
+    }
+
+    // 입력한 값들에 대한 유효성 검사
+    function ValidateForm() {
+        var nameValue = $("#Name").val();
+
+        if (nameValue == "") {
+            alert("제품 이름을 입력해주세요.");
+            return false;
+        }
+
+        return true;
+    }
+
+    // 제품 검색
+    function ProductsSearchPop() {
+        WindowOpenScroll("/Products/Index?isPop=true", "", 350, 600, 100, 100);
+    }
+    // 팝업으로 검색한 제품 세팅
+    function SetProductsInfo(Productid, Productname) {
+        $("#Productname").val(Productname);
+        $("#Productid").val(Productid);
+    }
+</script>
+
+<div class="View">
+    <div class="container custom-container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">제품 생성</p>
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Prices" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Prices" class="form-control" />
-                <span asp-validation-for="Prices" class="text-danger"></span>
+
+        <div class="col-md-12">
+            <div class="custom-title">
+                <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                <span>기본 정보</span>
+                <hr />
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Cost" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Cost" class="form-control" />
-                <span asp-validation-for="Cost" class="text-danger"></span>
+
+        <form class="form-horizontal" id="PricesCreateForm" action="/Products/Create" method="post">
+            @Html.AntiForgeryToken()
+            <div class="form-group">
+                <label class="col-md-1 control-label requireField">제품</label>
+                <div class="col-md-3">
+                    <div class="input-group">
+                        <input type="hidden" id="Productid" name="Productid" />
+                        <input type="text" id="Productname" name="Productname" class="form-control"
+                               placeholder="선택된 제품이 표시됩니다." aria-describedby="product name"
+                               readonly="readonly" />
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" onclick="ProductsSearchPop();">
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </button>
+                        </span>
+                    </div>
+                </div>
+                <label class="col-md-1 control-label">원가</label>
+                <div class="col-md-3">
+                    <input type="number" id="Cost" name="Cost" class="form-control" placeholder="원가 입력" />
+                </div>
+                <label class="col-md-1 control-label">판매가</label>
+                <div class="col-md-3">
+                    <input type="number" id="Prices" name="Prices" class="form-control" placeholder="가격표 입력" />
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Currency" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Currency" class="form-control" />
-                <span asp-validation-for="Currency" class="text-danger"></span>
+            <div class="form-group">
+                <label class="col-md-1 control-label">통화</label>
+                <div class="col-md-3">
+                    <select id="Currency" name="Currency" class="form-control"></select>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createdate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createdate" class="form-control" />
-                <span asp-validation-for="Createdate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createuser" class="form-control" />
-                <span asp-validation-for="Createuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifydate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifydate" class="form-control" />
-                <span asp-validation-for="Modifydate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifyuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifyuser" class="form-control" />
-                <span asp-validation-for="Modifyuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Ownerid" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Ownerid" class="form-control" />
-                <span asp-validation-for="Ownerid" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        </form>
+
+        <div class="row">
+            @if (ViewData["Write"].ToString().Equals("4-1") || ViewData["Write"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="CreatePricesButton" class="btn btn-default" onclick="SubmitForm();">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+            }
+            <div class="col-md-2 custom-row-btn-margin">
+                <a href="/Products/Index" class="btn btn-default">
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    목록
+                </a>
             </div>
         </div>
     </div>
-</form>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
