가격표 생성 기능 추가 시작

--- a/PodoDemo/Views/Prices/Create.cshtml
+++ b/PodoDemo/Views/Prices/Create.cshtml
@@ -24,10 +24,10 @@
 
     // 입력한 값들에 대한 유효성 검사
     function ValidateForm() {
-        var nameValue = $("#Name").val();
+        var productValue = $("#Productid").val();
 
-        if (nameValue == "") {
-            alert("제품 이름을 입력해주세요.");
+        if (productValue == "") {
+            alert("제품을 선택해주세요.");
             return false;
         }
 
