제품 생성 / 인덱스 수정

--- a/PodoDemo/Views/Prices/Create.cshtml
+++ b/PodoDemo/Views/Prices/Create.cshtml
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <form class="form-horizontal" id="PricesCreateForm" action="/Products/Create" method="post">
+        <form class="form-horizontal" id="PricesCreateForm" action="/Prices/Create" method="post">
             @Html.AntiForgeryToken()
             <div class="form-group">
                 <label class="col-md-1 control-label requireField">제품</label>
