가격표 수정 페이지 제작 시작

--- a/PodoDemo/Views/Prices/Create.cshtml
+++ b/PodoDemo/Views/Prices/Create.cshtml
@@ -49,7 +49,7 @@
     <div class="container custom-container">
         <div class="row">
             <div class="col-md-12 custom-header">
-                <p class="text-left">제품 생성</p>
+                <p class="text-left">가격표 생성</p>
             </div>
         </div>
 
