--- a/PodoDemo/Views/Prices/Index.cshtml
+++ b/PodoDemo/Views/Prices/Index.cshtml
@@ -44,7 +44,7 @@
             else
             {
                 <text>
-            location.href = "/Prices/Edit/" + data.Productid;
+            location.href = "/Prices/Edit/" + data.Priceid;
                 </text>
             }
         });
